
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int printf (char*) ;

__attribute__((used)) static void
cli_print_pad (int cnt)
{
  for (int i = 0; i < cnt; i++)
  {
    printf (" ");
  }
}
